why no worky???

--- a/SecretSanta.ApiService/Services/Email/EmailTemplate/SecretSantaEmailTemplate.html
+++ b/SecretSanta.ApiService/Services/Email/EmailTemplate/SecretSantaEmailTemplate.html
@@ -3,19 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Secret Santa / Amigo Oculto</title>
+    <title>Amigo Oculto</title>
 </head>
 <body>
     <h1>🎅 Amigo Oculto 🎁</h1>
     <p>Ora boas {{GiverName}},</p>
     <p>Foste escolhido como o amigo oculto de <strong>{{ReceiverName}}</strong>!</p>
     <p>Felizes ofertas e Feliz Natal!</p>
-
-    <hr />
-
-    <h1>🎅 Secret Santa Gift Exchange 🎁</h1>
-    <p>Hello {{GiverName}},</p>
-    <p>You have been chosen as the Secret Santa for <strong>{{ReceiverName}}</strong>!</p>
-    <p>Happy gift-giving and Merry Christmas!</p>
 </body>
 </html>
