changed to async email send

--- a/SecretSanta.ApiService/Services/Email/EmailTemplate/SecretSantaEmailTemplate.html
+++ b/SecretSanta.ApiService/Services/Email/EmailTemplate/SecretSantaEmailTemplate.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amigo Oculto</title>
+    <style>
+        body {
+            font-size: 16px;
+        }
+    </style>
 </head>
 <body>
-    <h1>🎅 Amigo Oculto 🎁</h1>
+    <h1>ÚLTIMA HORA: {{SentDate}} - 🎅 Amigo Oculto 🎁</h1>
     <p>Ora boas {{GiverName}},</p>
     <p>Foste escolhido como o amigo oculto de <strong>{{ReceiverName}}</strong>!</p>
     <p>Felizes ofertas e Feliz Natal!</p>
